--- a/.github/workflows/hypothesis-test.yml
+++ b/.github/workflows/hypothesis-test.yml
@@ -3,7 +3,7 @@ on:
   workflow_dispatch:
   schedule:
     # min hour dom month dow
-    - cron:  '0 6 * * *'
+    - cron:  '0 6 * * 3'
 env:
   python_version: '3.12'
 
