Implement StyleEditor (encompasses a color picker) Instead of using the StyleSheet, one can now use the StyleEditor. The StyleEditor is a GUI that allows to style elements by their name and is coherent with the StyleSheet.
Co-authored-by: Francisco Gouveia <francisco.t.gouveia@tecnico.ulisboa.pt>

--- a/.all-contributorsrc
+++ b/.all-contributorsrc
@@ -1466,6 +1466,15 @@
       "contributions": [
         "translation"
       ]
+    },
+    {
+      "login": "hulsed",
+      "name": "Daniel Hulse",
+      "avatar_url": "https://avatars.githubusercontent.com/u/23367230?v=4",
+      "profile": "https://fediscience.org/@Daniel_Hulse",
+      "contributions": [
+        "doc"
+      ]
     }
   ],
   "contributorsPerLine": 7,
